# EnclaveFibonacci

./: .gitignore  CMakeLists.txt  EnclaveFibonacci.edl
bld/ls-ls1012grapeboard/: .bashrc
enc/: CMakeLists.txt  enc.c
host/: CMakeLists.txt  host.c  host.h  main.c
